fix: added pre-wrap to avoid overflow issues

--- a/src/globals.css
+++ b/src/globals.css
@@ -5,4 +5,5 @@ html {
 
 pre {
     margin: 0;
+    overflow-x: hidden;
 }
